load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "socket.go",
    ],
    importpath = "github.com/scionproto/scion/go/flowtele",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "//go/flowtele/dbus:go_default_library",
    ],
)

scion_go_binary(
    name = "flowtele_socket",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
