load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "dbus_base.go",
        "signal_base.go",
        "fshaper_dbus.go",
        "fshaper_signal.go",
        "quic_dbus.go",
        "quic_signal.go",
    ],
    importpath = "github.com/scionproto/scion/go/flowtele/dbus",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_godbus_dbus//:go_default_library",
        "@com_github_godbus_dbus//introspect:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
    ],
)
